# seqan-cmake-tutorials

./: .gitignore  CMakeLists.txt  LICENSE  README.2.md  README.3.md  README.4.md  README.5.md  README.6.md  README.7.md  README.md
lib_factorial/: CMakeLists.txt  factorial.cpp  factorial.h
seqan_app/: CMakeLists.txt
seqan_app2/: CMakeLists.txt  seqan_app.cpp
test_factorial/: CMakeLists.txt  factorial.h  factorial_main.cpp
test_factorial_shared/: CMakeLists.txt  factorial_main.cpp
test_hello_world/: CMakeLists.txt  Makefile
